fix: 优化样式，修复components table高度过高时向下滚动出现overflow异常的问题。

--- a/miniperf/ui/Components/MainPage.css
+++ b/miniperf/ui/Components/MainPage.css
@@ -7,10 +7,11 @@
 }
 .container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     flex: 1;
+    overflow: hidden;
 }
 
 .MuiContainer-root {
