--- a/miniperf/ui/res/css/ui.css
+++ b/miniperf/ui/res/css/ui.css
@@ -7,8 +7,8 @@
 }
 #container {
     width: 100%;
-    height: 100%;
-
+    height: 100vh;
+    overflow: hidden;
 }
 .content {
     width: 100%;
@@ -73,6 +73,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 ::-webkit-scrollbar {
     width: 5px; /* 纵向滚动条*/
